--- a/phase2/app/src/main/res/layout/activity_leader_board.xml
+++ b/phase2/app/src/main/res/layout/activity_leader_board.xml
@@ -8,7 +8,7 @@
     tools:context=".Statistics.LeaderBoardActivity">
 
     <TextView
-        android:id="@+id/title3"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
