--- a/phase2/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase2/app/src/main/res/layout/activity_picture_game.xml
@@ -55,7 +55,7 @@
         android:layout_marginEnd="156dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/renner"
-        android:onClick="onNextButtonPressed"
+        android:onClick="onContinuePressed"
         android:text="@string/continue_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
