--- a/phase2/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase2/app/src/main/res/layout/activity_reaction_time.xml
@@ -31,7 +31,7 @@
         android:background="#00FFFFFF"
         android:fontFamily="@font/renner"
         android:gravity="center"
-        android:text="Instruction Message"
+        android:text="Ready Message"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,10 +52,10 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/instructionText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.078" />
+        app:layout_constraintVertical_bias="0.343" />
 
     <TextView
         android:id="@+id/continueText"
@@ -75,29 +75,29 @@
 
     <TextView
         android:id="@+id/numLevelsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="47dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/renner"
         android:text="0/5"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/averageText"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/averageText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="47dp"
+        android:layout_height="33dp"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/renner"
         android:text="0ms"
         android:textColor="@android:color/secondary_text_light"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/numLevelsText"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.017"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
